--- a/.travis.yml
+++ b/.travis.yml
@@ -3,12 +3,11 @@
 # * https://github.com/supermarin/xcpretty#usage
 
 osx_image: xcode8.0
-language: swift
+language: objective-c
 # cache: cocoapods
 # podfile: Example/Podfile
 # before_install:
 # - gem install cocoapods # Since Travis is not always on latest version
 # - pod install --project-directory=Example
-script:
-- set -o pipefail && xcodebuild test -workspace Example/QuickRippleButton.xcworkspace -scheme QuickRippleButton-Example -sdk iphoneos10.0 ONLY_ACTIVE_ARCH=NO | xcpretty
+script: — xcodebuild clean build -workspace NSManchester.xcworkspace -scheme NSManchester -destination “platform=iOS Simulator,name=iPhone 6S”
 - pod lib lint
