--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,6 @@ language: objective-c
 # podfile: Example/Podfile
 # before_install:
 # - gem install cocoapods # Since Travis is not always on latest version
-# - pod install --project-directory=Example
-script: — xcodebuild clean build -workspace NSManchester.xcworkspace -scheme NSManchester -destination “platform=iOS Simulator,name=iPhone 6S”
+-pod install --project-directory=Example
+script: — xcodebuild clean build -workspace Example/QuickRippleButton.xcworkspace -scheme QuickRippleButton-Example -destination “platform=iOS Simulator,name=iPhone 6S”
 - pod lib lint
