--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,8 @@ osx_image: xcode8.0
 language: objective-c
 # cache: cocoapods
 # podfile: Example/Podfile
-# before_install:
-# - gem install cocoapods # Since Travis is not always on latest version
--pod install --project-directory=Example
+before_install:
+- gem install cocoapods # Since Travis is not always on latest version
+- pod install --project-directory=Example
 script: — xcodebuild clean build -workspace Example/QuickRippleButton.xcworkspace -scheme QuickRippleButton-Example -destination “platform=iOS Simulator,name=iPhone 6S”
 - pod lib lint
