--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,6 @@
 language: objective-c
 osx_image: xcode8
+podfile: ./Example/Podfile
 env:
   global:
   - LC_CTYPE=en_US.UTF-8
@@ -11,7 +12,6 @@ env:
     - DESTINATION="OS=10.0,name=iPhone 7 Plus"     SCHEME="$IOS_FRAMEWORK_SCHEME"     SDK="$IOS_SDK"     RUN_TESTS="YES" BUILD_EXAMPLE="YES" POD_LINT="YES"
 before_install:
   - gem install cocoapods --pre --no-rdoc --no-ri --no-document --quiet
-  - podfile: ./Example/Podfile
   - pod install
 script:
   - set -o pipefail
