--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,5 @@
 language: objective-c
 osx_image: xcode8
-podfile: ./Example/Podfile
 env:
   global:
   - LC_CTYPE=en_US.UTF-8
@@ -8,6 +7,7 @@ env:
   - WORKSPACE=Example/QuickRippleButton.xcworkspace
   - IOS_FRAMEWORK_SCHEME="QuickRippleButton-Example"
   - IOS_SDK=iphonesimulator10.0
+  - Podfile = "./Example/Podfile"
   matrix:
     - DESTINATION="OS=10.0,name=iPhone 7 Plus"     SCHEME="$IOS_FRAMEWORK_SCHEME"     SDK="$IOS_SDK"     RUN_TESTS="YES" BUILD_EXAMPLE="YES" POD_LINT="YES"
 before_install:
